--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,34 +1,10 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "Python 3.7.7 64-bit ('thesis': conda)",
-   "display_name": "Python 3.7.7 64-bit ('thesis': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "fddbd02b904ac802836bb58133b0081e1838d74dfef286d96e1f58c43130a4c5"
-    }
-   }
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import random\n",
@@ -41,65 +17,28 @@
     "import seaborn as sns\n",
     "from matplotlib.colors import ListedColormap\n",
     "from textwrap import wrap"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "data_dir = os.path.join(os.getcwd(), 'data')\n",
     "result_dir = os.path.join(os.getcwd(), 'results')\n",
     "fig_dir = os.path.join(os.getcwd(), 'figures')\n",
     "adata_name = 'SAGE-20201013.h5ad'\n",
     "model = 'SAGE'"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "adata = sc.read(os.path.join(result_dir, adata_name))\n",
-    "num_cluster = adata.obs['spage2vec'].max() + 1\n",
-    "df_heart = adata.obs[adata.obs['spage2vec'] > -1]\n",
-    "df_heart"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "                gene      spotX      spotY  pcw  section louvain  spage2vec  \\\n",
-       "4.5_1_11        MYRF   3242.580   1736.800    4        1       7          1   \n",
-       "4.5_1_18       ITLN1   3217.077   1764.718    4        1      21         18   \n",
-       "4.5_1_14         CPE   3260.000   1745.267    4        1       7          1   \n",
-       "4.5_1_15      CRABP2   3269.818   1748.345    4        1      18         20   \n",
-       "4.5_1_12       TNNI1   3098.909   1738.303    4        1      16          0   \n",
-       "...              ...        ...        ...  ...      ...     ...        ...   \n",
-       "9.5_3_538710    MYH7  18068.310  24232.630    9        3       0          6   \n",
-       "9.5_3_538718   MYOM1  18049.890  24246.370    9        3       0          6   \n",
-       "9.5_3_538694    MYL2  18028.650  24213.420    9        3       0          6   \n",
-       "9.5_3_538712  COL1A1  18189.620  24235.260    9        3      10          9   \n",
-       "9.5_3_538719  SLC8A1  18043.490  24259.230    9        3       0          6   \n",
-       "\n",
-       "             cell_type_id  \n",
-       "4.5_1_11              NaN  \n",
-       "4.5_1_18              NaN  \n",
-       "4.5_1_14              NaN  \n",
-       "4.5_1_15              NaN  \n",
-       "4.5_1_12              NaN  \n",
-       "...                   ...  \n",
-       "9.5_3_538710          NaN  \n",
-       "9.5_3_538718          NaN  \n",
-       "9.5_3_538694          NaN  \n",
-       "9.5_3_538712          NaN  \n",
-       "9.5_3_538719          NaN  \n",
-       "\n",
-       "[2417736 rows x 8 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -255,17 +194,54 @@
        "</table>\n",
        "<p>2417736 rows × 8 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                gene      spotX      spotY  pcw  section louvain  spage2vec  \\\n",
+       "4.5_1_11        MYRF   3242.580   1736.800    4        1       7          1   \n",
+       "4.5_1_18       ITLN1   3217.077   1764.718    4        1      21         18   \n",
+       "4.5_1_14         CPE   3260.000   1745.267    4        1       7          1   \n",
+       "4.5_1_15      CRABP2   3269.818   1748.345    4        1      18         20   \n",
+       "4.5_1_12       TNNI1   3098.909   1738.303    4        1      16          0   \n",
+       "...              ...        ...        ...  ...      ...     ...        ...   \n",
+       "9.5_3_538710    MYH7  18068.310  24232.630    9        3       0          6   \n",
+       "9.5_3_538718   MYOM1  18049.890  24246.370    9        3       0          6   \n",
+       "9.5_3_538694    MYL2  18028.650  24213.420    9        3       0          6   \n",
+       "9.5_3_538712  COL1A1  18189.620  24235.260    9        3      10          9   \n",
+       "9.5_3_538719  SLC8A1  18043.490  24259.230    9        3       0          6   \n",
+       "\n",
+       "             cell_type_id  \n",
+       "4.5_1_11              NaN  \n",
+       "4.5_1_18              NaN  \n",
+       "4.5_1_14              NaN  \n",
+       "4.5_1_15              NaN  \n",
+       "4.5_1_12              NaN  \n",
+       "...                   ...  \n",
+       "9.5_3_538710          NaN  \n",
+       "9.5_3_538718          NaN  \n",
+       "9.5_3_538694          NaN  \n",
+       "9.5_3_538712          NaN  \n",
+       "9.5_3_538719          NaN  \n",
+       "\n",
+       "[2417736 rows x 8 columns]"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "adata = sc.read(os.path.join(result_dir, adata_name))\n",
+    "num_cluster = adata.obs['spage2vec'].max() + 1\n",
+    "df_heart = adata.obs[adata.obs['spage2vec'] > -1]\n",
+    "df_heart"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "zeileis_28 = [\n",
     "    \"#023fa5\", \"#7d87b9\", \"#bec1d4\", \"#d6bcc0\", \"#bb7784\", \"#8e063b\", \"#4a6fe3\",\n",
@@ -274,26 +250,26 @@
     "    \"#f3e1eb\", \"#f6c4e1\", \"#f79cd4\",\n",
     "    '#7f7f7f', \"#c7c7c7\", \"#1CE6FF\", \"#336600\",  # these last ones were added,\n",
     "][:num_cluster]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ct_cmap = np.array([\n",
     "    '#F8766D', '#E58700', '#C99800', '#A3A500', '#6BB100',\n",
     "    '#00BA38', '#00BF7D', '#00C0AF', '#00BCD8', '#00B0F6', \n",
     "    '#619CFF', '#B983FF', '#E76BF3', '#FD61D1', '#FF67A4'\n",
     "])"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def spatial_plot(pcw):\n",
     "    n_section = 3\n",
@@ -331,23 +307,23 @@
     "    fig.tight_layout()\n",
     "    fig.savefig(os.path.join(fig_dir, 'spatial-{}-{}.png'.format(model, pcw)), dpi=200)\n",
     "    plt.close()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for pcw in [4, 6, 9]:\n",
     "    spatial_plot(pcw)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df_cell = {}\n",
     "for name in ['6.5_1', '6.5_2']:\n",
@@ -373,14 +349,14 @@
     "id_cell_type[3] = '(3) Epicardium-derived cells'\n",
     "id_cell_type[4] = '(4) Fibroblast-like (smaller vascular development)'\n",
     "id_cell_type[8] = '(8) Fibroblast-like (larger vascular development)'\n",
-    "id_cell_type[14] = '(14) Cardiac neural crest cells & Schwann progenitor cells'\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "id_cell_type[14] = '(14) Cardiac neural crest cells & Schwann progenitor cells'"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
     "labels = ['\\n'.join(wrap(line, 30)) for line in list(id_cell_type.values())[1:]]\n",
@@ -388,14 +364,14 @@
     "ax.axis('off')\n",
     "fig.tight_layout()\n",
     "fig.savefig(os.path.join(fig_dir, 'ct.png'))\n",
-    "plt.close()\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "plt.close()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 3, figsize=(21, 7))\n",
     "subset = (df_heart['pcw'] == 6) & (df_heart['section'] == 2)\n",
@@ -444,13 +420,13 @@
     "fig.tight_layout()\n",
     "fig.savefig(os.path.join(fig_dir, 'spatial-{}-0.png'.format(model)), dpi=200)\n",
     "plt.close()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 3, figsize=(21, 7))\n",
     "subset = (df_heart['pcw'] == 6) & (df_heart['section'] == 2)\n",
@@ -517,13 +493,13 @@
     "fig.tight_layout()\n",
     "fig.savefig(os.path.join(fig_dir, 'spatial-{}-1.png'.format(model)), dpi=200)\n",
     "plt.close()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 3, figsize=(21, 7))\n",
     "pcws = [4, 6, 9]\n",
@@ -556,13 +532,15 @@
     "fig.tight_layout()\n",
     "fig.savefig(os.path.join(fig_dir, 'spatial-{}-2.png'.format(model)), dpi=200)\n",
     "plt.close()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "fig, axes = plt.subplots(1, 2, figsize=(14, 7))\n",
     "clusters = [16, 18, 2]\n",
@@ -594,11 +572,33 @@
     "fig.tight_layout()\n",
     "fig.savefig(os.path.join(fig_dir, 'spatial-{}-3.png'.format(model)), dpi=200)\n",
     "plt.close()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "tags": []
-   }
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.7.7 64-bit ('thesis': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "fddbd02b904ac802836bb58133b0081e1838d74dfef286d96e1f58c43130a4c5"
+    }
+   },
+   "name": "Python 3.7.7 64-bit ('thesis': conda)"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7-final"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
