change to pathlib

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -10,6 +10,7 @@
     "import random\n",
     "import time\n",
     "import re\n",
+    "from pathlib import Path\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,9 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.join(os.getcwd(), 'data')\n",
-    "result_dir = os.path.join(os.getcwd(), 'results')\n",
-    "fig_dir = os.path.join(os.getcwd(), 'figures')\n",
+    "data_dir = Path.cwd() / 'data'\n",
+    "result_dir = Path.cwd() / 'results'\n",
+    "fig_dir = Path.cwd() / 'figures'\n",
     "adata_name = 'SAGE-20201013.h5ad'\n",
     "model = 'SAGE'"
    ]
@@ -231,7 +232,7 @@
     }
    ],
    "source": [
-    "adata = sc.read(os.path.join(result_dir, adata_name))\n",
+    "adata = sc.read(result_dir / adata_name)\n",
     "num_cluster = adata.obs['spage2vec'].max() + 1\n",
     "df_heart = adata.obs[adata.obs['spage2vec'] > -1]\n",
     "df_heart"
@@ -305,7 +306,7 @@
     "        axes[s].set_xticks([])\n",
     "        axes[s].set_yticks([])\n",
     "    fig.tight_layout()\n",
-    "    fig.savefig(os.path.join(fig_dir, 'spatial-{}-{}.png'.format(model, pcw)), dpi=200)\n",
+    "    fig.savefig(fig_dir / 'spatial-{}-{}.png'.format(model, pcw), dpi=200)\n",
     "    plt.close()"
    ]
   },
@@ -327,8 +328,8 @@
    "source": [
     "df_cell = {}\n",
     "for name in ['6.5_1', '6.5_2']:\n",
-    "    df_cell_segmentation = pd.read_csv(os.path.join(data_dir, 'spots_w_cell_segmentation_PCW{}.csv'.format(name)))\n",
-    "    df_cell_calling = pd.read_csv(os.path.join(data_dir, 'cell_calling_PCW{}.csv'.format(name)))\n",
+    "    df_cell_segmentation = pd.read_csv(data_dir / 'spots_w_cell_segmentation_PCW{}.csv'.format(name))\n",
+    "    df_cell_calling = pd.read_csv(data_dir / 'cell_calling_PCW{}.csv'.format(name))\n",
     "    df_cell[name] = pd.merge(\n",
     "        df_cell_segmentation, df_cell_calling[['cell', 'celltype']], \n",
     "        how='left', left_on='parent_id', right_on='cell'\n",
@@ -363,7 +364,7 @@
     "ax.text(0, 0.5, '\\n'.join(labels), va='center')\n",
     "ax.axis('off')\n",
     "fig.tight_layout()\n",
-    "fig.savefig(os.path.join(fig_dir, 'ct.png'))\n",
+    "fig.savefig(fig_dir / 'ct.png')\n",
     "plt.close()"
    ]
   },
@@ -418,7 +419,7 @@
     ")\n",
     "axes[2].axis('off')\n",
     "fig.tight_layout()\n",
-    "fig.savefig(os.path.join(fig_dir, 'spatial-{}-0.png'.format(model)), dpi=200)\n",
+    "fig.savefig(fig_dir / 'spatial-{}-0.png'.format(model), dpi=200)\n",
     "plt.close()"
    ]
   },
@@ -491,7 +492,7 @@
     ")\n",
     "axes[2].axis('off')\n",
     "fig.tight_layout()\n",
-    "fig.savefig(os.path.join(fig_dir, 'spatial-{}-1.png'.format(model)), dpi=200)\n",
+    "fig.savefig(fig_dir / 'spatial-{}-1.png'.format(model), dpi=200)\n",
     "plt.close()"
    ]
   },
@@ -530,7 +531,7 @@
     "    axes[i].set_yticks([])\n",
     "axes[1].legend(loc='best', markerscale=15, fontsize=15)\n",
     "fig.tight_layout()\n",
-    "fig.savefig(os.path.join(fig_dir, 'spatial-{}-2.png'.format(model)), dpi=200)\n",
+    "fig.savefig(fig_dir / 'spatial-{}-2.png'.format(model), dpi=200)\n",
     "plt.close()"
    ]
   },
@@ -570,7 +571,7 @@
     "    axes[s].set_yticks([])\n",
     "axes[1].legend(loc='best', markerscale=15, fontsize=15)\n",
     "fig.tight_layout()\n",
-    "fig.savefig(os.path.join(fig_dir, 'spatial-{}-3.png'.format(model)), dpi=200)\n",
+    "fig.savefig(fig_dir / 'spatial-{}-3.png'.format(model), dpi=200)\n",
     "plt.close()"
    ]
   }
