--- a/hm.ipynb
+++ b/hm.ipynb
@@ -10,6 +10,7 @@
     "import random\n",
     "import time\n",
     "import re\n",
+    "from pathlib import Path\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,9 +26,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.join(os.getcwd(), 'data')\n",
-    "result_dir = os.path.join(os.getcwd(), 'results')\n",
-    "fig_dir = os.path.join(os.getcwd(), 'figures')\n",
+    "data_dir = Path.cwd() / 'data'\n",
+    "result_dir = Path.cwd() / 'results'\n",
+    "fig_dir = Path.cwd() / 'figures'\n",
     "adata_name = 'SAGE-20201013.h5ad'\n",
     "model = 'SAGE'"
    ]
@@ -42,12 +43,12 @@
    "source": [
     "df = {}\n",
     "for name in ['4.5_1', '4.5_2', '4.5_3', '6.5_1', '6.5_2', '9.5_1', '9.5_2', '9.5_3']:\n",
-    "    df[name] = pd.read_csv(os.path.join(data_dir, 'spots_PCW{}.csv'.format(name)))\n",
+    "    df[name] = pd.read_csv(data_dir / 'spots_PCW{}.csv'.format(name))\n",
     "    df[name]['pcw'] = int(name[0])\n",
     "    df[name]['section'] = int(name[-1])\n",
     "    df[name] = df[name].set_index('{}_'.format(name) + df[name].index.astype(str))\n",
     "df_heart = pd.concat(df.values())\n",
-    "df_nodes = pd.read_csv(os.path.join(result_dir, 'nodes.csv'), index_col=0)\n",
+    "df_nodes = pd.read_csv(result_dir / 'nodes.csv', index_col=0)\n",
     "df_heart = df_heart.loc[df_nodes.index]"
    ]
   },
@@ -213,7 +214,7 @@
     }
    ],
    "source": [
-    "df_taglist = pd.read_csv(os.path.join(data_dir, 'taglist_heart.csv'), names=['tag', 'gene'])\n",
+    "df_taglist = pd.read_csv(data_dir / 'taglist_heart.csv', names=['tag', 'gene'])\n",
     "gene_tag_dict = pd.Series(df_taglist['tag'].to_list(), index=df_taglist['gene']).to_dict()\n",
     "df_heart['barcode'] = df_heart['gene'].map(gene_tag_dict)\n",
     "df_heart"
@@ -264,7 +265,7 @@
     }
    ],
    "source": [
-    "adata = sc.read(os.path.join(result_dir, adata_name))\n",
+    "adata = sc.read(result_dir / adata_name)\n",
     "df_heart['louvain'] = adata.obs['louvain'].astype('int64')\n",
     "print(df_heart['louvain'].value_counts())"
    ]
@@ -293,7 +294,7 @@
     "g = sns.clustermap(\n",
     "    table1, method='average', metric='correlation', figsize=(10, 12), row_cluster=False, dendrogram_ratio=0.3, \n",
     "    cmap='viridis', xticklabels=True, yticklabels=True)\n",
-    "g.savefig(os.path.join(fig_dir, 'hm_pre.png'))"
+    "g.savefig(fig_dir / 'hm_pre.png')"
    ]
   },
   {
@@ -321,7 +322,7 @@
     "df_heart['cluster_merged'] = df_heart['louvain'].map(merged_labels)\n",
     "fig, ax = plt.subplots()\n",
     "dn = dendrogram(Z, color_threshold=cutoff)\n",
-    "fig.savefig(os.path.join(fig_dir, 'dg.png'))"
+    "fig.savefig(fig_dir / 'dg.png')"
    ]
   },
   {
@@ -363,7 +364,7 @@
     "adata.obs['spage2vec'] = df_heart['spage2vec']\n",
     "adata.obs['spage2vec'] = adata.obs['spage2vec'].fillna(value=-1)\n",
     "adata.obs['spage2vec'] = adata.obs['spage2vec'].astype('int64')\n",
-    "adata.write(os.path.join(result_dir, adata_name))"
+    "adata.write(result_dir / adata_name)"
    ]
   },
   {
@@ -390,7 +391,7 @@
     "g = sns.clustermap(\n",
     "    table2, method='average', metric='correlation', figsize=(10, 12), row_cluster=False,\n",
     "    cmap='viridis', xticklabels=True, yticklabels=True)\n",
-    "g.savefig(os.path.join(fig_dir, 'hm.png'))"
+    "g.savefig(fig_dir / 'hm.png')"
    ]
   },
   {
@@ -399,7 +400,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_celltype = pd.read_csv(os.path.join(result_dir, 'celltype.csv'), index_col=0)\n",
+    "df_celltype = pd.read_csv(result_dir / 'celltype.csv', index_col=0)\n",
     "df_heart_ct = pd.concat([df_heart, df_celltype], axis=1, join='inner')\n",
     "df_heart_ct = df_heart_ct[df_heart_ct['cell_type_id'] >= 0]"
    ]
@@ -448,7 +449,7 @@
     "row_order = table3.idxmax(axis=1).sort_values().index\n",
     "g = sns.heatmap(table3.reindex(row_order), cmap='viridis', xticklabels=True, yticklabels=True)\n",
     "print(table3.shape)\n",
-    "g.figure.savefig(os.path.join(fig_dir, 'cm.png'), dpi=100)"
+    "g.figure.savefig(fig_dir / 'cm.png', dpi=100)"
    ]
   },
   {
@@ -475,7 +476,7 @@
     "g = sns.clustermap(\n",
     "    table4, method='average', metric='correlation', figsize=(10, 12), row_cluster=False,\n",
     "    cmap='viridis', xticklabels=True, yticklabels=True)\n",
-    "g.savefig(os.path.join(fig_dir, 'hm_ct.png'))"
+    "g.savefig(fig_dir / 'hm_ct.png')"
    ]
   },
   {
@@ -495,7 +496,7 @@
     "        criterion = (df_heart['pcw']==pcw) & (df_heart['section']==section)\n",
     "        df_heart_csv.loc[criterion, 'spotX'] = df_heart.loc[criterion, 'spotX'] + j*width\n",
     "        df_heart_csv.loc[criterion, 'spotY'] = df_heart.loc[criterion, 'spotY'] + height[:i].sum()\n",
-    "df_heart_csv.to_csv(os.path.join(result_dir, 'spage2vec_22.csv'))"
+    "df_heart_csv.to_csv(result_dir / 'spage2vec_22.csv')"
    ]
   }
  ],
